# AI-DMS

./: .dockerignore  .env.example  .gitignore  .vercelignore  README.md  render.yaml
.claude/: settings.json
.github/workflows/: deploy.yml  release.yml
scripts/: build_local.sh  check-source-hiding.sh  ci_provision_engine.py  dev-browser.sh  dev.sh  fetch-engine.sh  install-engine.sh  install_engine.py  migrate_sqlite_to_pg.py  migrate_to_type_first_schema.py  seed_ai_dms_taxonomy.py  smoke.py  smoke_fixtures.py
sidecar/: .dockerignore  Dockerfile  build_nuitka.sh  pyproject.toml
sidecar/dms/: __main__.py  config.py  logging_setup.py  server.py
sidecar/dms/connectors/: local_folder.py
sidecar/dms/db/: repo.py  schema.sql  schema_pg.sql
sidecar/dms/llm/: manifest.py  openai_client.py  prompts.py  runner.py
sidecar/dms/pipeline/: extractors.py  filer.py  job.py  office.py  pdf_pages.py  taxonomy.py  transcribe.py  vision.py
sidecar/dms/storage/: supabase_store.py
ui/: .env.example  .gitignore  .vercelignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: EmptyState.tsx  JobProgress.tsx  Logo.tsx  StatusPill.tsx  Toaster.tsx  Topbar.tsx
ui/src/lib/: api.ts  file-icon.ts  format.ts  query-persister.ts  store.ts  theme.tsx
ui/src/routes/: browse.tsx  dashboard.tsx  new-job.tsx  past-jobs.tsx  settings.tsx
ui/src/styles/: globals.css
(+7 files in other folders)
