[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dms-sidecar"
version = "0.2.0"
description = "AI DMS backend sidecar (web build)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "ulid-py>=1.1",
    "python-multipart>=0.0.9",
    "openai>=1.40",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["dms*"]

[tool.setuptools.package-data]
"dms.db" = ["schema_pg.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
